# channel-drain

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs
tests/: smoke.rs
