[package]
name = "channel-drain"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"


[dev-dependencies]
crossbeam = { version = "0.8", features = ["crossbeam-channel"]}
