[package]
name = "channel-drain"
version = "0.1.0"
edition = "2021"
authors = ["Matt Kline <matt@bitbashing.io>"]
license = "Zlib"
repository = "https://github.com/mrkline/channel-drain.git"
readme = "README.md"
documentation = "https://docs.rs/channel-drain"
description = "Drain channels with simple syntax"
keywords = ["channel", "select", "csp"]
categories = ["concurrency"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8", features = ["crossbeam-channel"]}
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
